<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_controller_signup_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splace_screen_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.SignUpSecond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/style_swiper" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_lbl_business"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:id="@+id/tv_fashion_style_signup_second"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="10dp"
                android:text="@string/rb_lbl_fashion_style"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:id="@+id/tv_hair_style_signup_second"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/radio_normal"
                android:drawablePadding="10dp"
                android:text="@string/rb_lbl_hair_style"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:id="@+id/et_store_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/white_border_linear_bg"
            android:padding="12dp"
            android:singleLine="true"
            android:hint="@string/hint_store"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_address_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/white_border_linear_bg"
            android:padding="12dp"
            android:hint="@string/hint_address"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_sign_up_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/my_button_bg"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/btn_lbl_signup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </LinearLayout>

    <mxi.com.styleswiperbusiness.widget.MyTextView
        android:id="@+id/tv_have_account_sign_up_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/btn_lbl_already_account"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

</LinearLayout>
