<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splace_screen_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.SignUpFirst">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/style_swiper" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:hint="@string/hint_name"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:hint="@string/hint_email"
            android:padding="12dp"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:inputType="numberDecimal"
            android:hint="@string/hint_phone"
            android:padding="12dp"
            android:singleLine="true"
            android:maxLength="10"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:id="@+id/et_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_next_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/my_button_bg"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/btn_lbl_next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"/>
    </LinearLayout>

    <mxi.com.styleswiperbusiness.widget.MyTextView
        android:id="@+id/tv_have_account_sign_up_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/btn_lbl_already_account"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
