<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splace_screen_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mxi.com.styleswiperbusiness.Activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/style_swiper" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <mxi.com.styleswiperbusiness.widget.MyEditText
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:hint="@string/hint_username"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/white_border_linear_bg" >

            <mxi.com.styleswiperbusiness.widget.MyEditText
                android:id="@+id/et_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:inputType="textPassword"
                android:hint="@string/hint_password_sign_in"
                android:text=""
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />
<!--
            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/forget_password"
                android:gravity="center"
                android:text="\?"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"/>-->
        </LinearLayout>
        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Forgot Password?"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/my_button_bg"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/btn_lbl_signin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"/>
    </LinearLayout>

    <mxi.com.styleswiperbusiness.widget.MyTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/btn_lbl_new_user"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
