<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="mxi.com.styleswiperbusiness.Activities.MyAccount">

    <ImageView
        android:id="@+id/iv_back_my_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@mipmap/back"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_image_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/stsw_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_image_profile"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true">

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_store_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border_linear_bg"
            android:text="Store"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_owner_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_border_linear_bg"
            android:text="Owner Name"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_border_linear_bg"
            android:text="Email"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_phone_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_border_linear_bg"
            android:text="Phone No."
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <mxi.com.styleswiperbusiness.widget.MyTextView
            android:id="@+id/tv_business_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_border_linear_bg"
            android:text="Business"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="12dp"
            android:orientation="horizontal">

            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_lbl_gender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:id="@+id/tv_male_my_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/radio_selector"
                android:drawablePadding="10dp"
                android:text="@string/rb_lbl_male"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <mxi.com.styleswiperbusiness.widget.MyTextView
                android:id="@+id/tv_female_my_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/radio_normal"
                android:drawablePadding="10dp"
                android:text="@string/rb_lbl_female"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
